fresh install works
Signed-off-by: Max <mcschrader@crimson.ua.edu>

--- a/config/sumo-pipelines/idm_calibration.yaml
+++ b/config/sumo-pipelines/idm_calibration.yaml
@@ -1,6 +1,6 @@
 Metadata:
   # The name will also show up as the main folder for simulation
-  name: IDMCalibration1Sec
+  name: IDMCalibration
 
 Blocks:
   CFModelParameters:
